# HRAssistant

./: .env.template  .gitignore  .gitmodules  README.md  compose.yaml  pyproject.toml  requirements.txt  run_utests.sh
frontend/: cards.js  index.html  main.js  styles.css
hr_assist/: __init__.py  evaluate.py
hr_assist/api/: api.py  model.py  service.py
hr_assist/data/: ai_data_entry_mgr.py  alkalmazas_tesztelo.py  dataset.py  penzugyi_auditor.py  preprocess.py  raw_data.py
hr_assist/db/: __init__.py  base.py  database.py  model.py  pg.py  similarity.py
hr_assist/func/: lm.py  prompts.py
hr_assist/model/: embed.py  lm.py  prompts.py
hr_assist/search/: pipeline.py  procedural.py  prompts.py  ranking.py
hr_assist/utils/: __init__.py  cached_bm25.py  preprocess.py
postgres/: schema.sql
tests/: test_service.py
